# uv-assignment

./: README.md
my-packaged-app/: pyproject.toml
my-packaged-app/src/my_packaged_app/: __init__.py
my-simple-app/: main.py  pyproject.toml
